# lib_sentrynative

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml
cmake/: FindExtCRASHPAD.cmake  FindExtMINICHROMIUM.cmake  FindExtProject.cmake  PackageConfig.cmake.in  SENTYNATIVEConfig.cmake.in  util.cmake
opt/: folders.csv
src/: CMakeLists.txt  sentry_core.c  sentry_database.c
src/backends/: sentry_backend_crashpad.cpp
